// Copyright Â© 2020-2022 The Trustix Authors
//
// SPDX-License-Identifier: MIT

syntax = "proto2";

option go_package = "github.com/nix-community/trustix/packages/trustix-proto/schema";

// Leaf value of a merkle tree
message LogLeaf {
  optional bytes Key = 1;
  optional bytes ValueDigest = 2;
  required bytes LeafDigest = 3;
}
